# my_ffmpeg

./: CMakeLists.txt  README.md
src/: main.cpp
